--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta-name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quotes</title>
 </head>
 <body>
+
     <h2 id="api-response"></h2>
-    <script src="poke.js"></script>
+
+    <button onclick="getData()">Get Quote</button>
+
+    <script src="quote.js"></script>
 </body>
 </html>
