--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta-name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quotes</title>
+    <title>Fish</title>
 </head>
 <body>
     <h2 id="api-response"></h2>
-    <button onclick="getData()">Get Quote</button>
-    <script src="quote.js"></script>
+    <section class="container"></section>
+        
+    <script src="fish.js"></script>
 </body>
 </html>
