--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta-name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fish</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heh</title>
 </head>
 <body>
     <h2 id="api-response"></h2>
     <section class="container"></section>
         
-    <script src="fish.js"></script>
+    <script src="starrail.js"></script>
 </body>
 </html>
