--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,6 @@
     <h2 id="api-response"></h2>
     <section class="container"></section>
 
-    <script src="starrail.js"></script>
+    <script type="module" src="/src/starrail.js"></script>
 </body>
 </html>
