--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h2 id="api-response"></h2>
-    <section class="container"></section>
+    <section class="container">
 
+    </section>
     <script type="module" src="/src/starrail.js"></script>
 </body>
 </html>
