--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/styles.css"/>
 </head>
 <body>
-    <h2 id="api-response"></h2>
+    <h2 id="api-response">s</h2>
     <section class="container">
     </section>
     <script type="module" src="/src/starrail.js"></script>
