--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heh</title>
-    <link rel="stylesheet" href="/src/styles.css"/>
+    <title>API</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h2 id="api-response">s</h2>
-    <section class="container">
+<body class="min-h-screen bg-slate-100 text-slate-900">
+
+
+    <h2
+        id="api-response"
+    ></h2>
+
+
+    <button
+        class="hidden backBtn mx-auto mb-6 block rounded-lg bg-slate-800 px-6 py-2 text-white font-medium hover:bg-slate-700 transition"
+    >
+        Back to Home Page
+    </button>
+
+
+    <section
+        class="container mx-auto grid max-w-6xl grid-cols-1 gap-6 px-4 sm:grid-cols-2 lg:grid-cols-3"
+    >
     </section>
-    <script type="module" src="/src/starrail.js"></script>
+
+
+    <script type="module" src="/src/app.js"></script>
 </body>
 </html>
+
+
+
