--- a/app/index.html
+++ b/app/index.html
@@ -7,26 +7,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="min-h-screen bg-slate-100 text-slate-900">
-
-
     <h2
         id="api-response"
     ></h2>
-
-
     <button
         class="hidden backBtn mx-auto mb-6 block rounded-lg bg-slate-800 px-6 py-2 text-white font-medium hover:bg-slate-700 transition"
     >
         Back to Home Page
     </button>
-
-
+    <input
+        id="search"
+        type="text"
+        placeholder="Search episodes"
+    >
+    <div id="results"></div>
     <section
         class="container mx-auto grid max-w-6xl grid-cols-1 gap-6 px-4 sm:grid-cols-2 lg:grid-cols-3"
     >
     </section>
-
-
     <script type="module" src="/src/app.js"></script>
 </body>
 </html>
